# typemore

./: .gitignore  AGENTS.md  CONTRIBUTING.md  ICON.MD  README.md  README.zh-CN.md  deploy.sh  index.html  package-lock.json  package.json  run.sh  vite.config.ts  website.md
docs/homebrew/: typemore.rb.example
scripts/: build_dmg.sh  build_windows_installer.ps1  release_to_homebrew.sh  windows-installer.iss
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/app/: audio.ts  recording-dialog.tsx  recording-list-panel.tsx  transcript-panel.tsx  types.ts  utils.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
