[package]
name = "TypeMore"
version = "0.1.4"
description = "Type More With Your Voice"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "typemore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
walkdir = "2.5"
sherpa-rs = "0.6.8"
hound = "3.5"
tauri-plugin-global-shortcut = "2.3.1"
cpal = "0.15"
rig-core = "0.31.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc = "0.2"
